# bus_schedule

./: .gitignore  Cargo.toml  Dioxus.toml  main.html  params.txt  style.css
assets/: main.css
html_pofc/: pofc.html
src/: main.rs
src/composants/: horaire.rs  interface.rs  style.css
