[package]
name = "bus_schedule"
version = "0.1.0"
authors = ["Nicolas Landucci <info@nicolaslanducci.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
chrono = "0.4.43"
dioxus = { version = "0.7.1", features = ["router"] }
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
